--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Candiformation</string>
 
+    <string name="google_cloud_server_client_id" translatable="false">520156803708-kqei1719oovuccblha0g6puhlqqpuc80.apps.googleusercontent.com</string>
 </resources>
