--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Candiformation</string>
 
-    <string name="String_1">
-        1. 코로나 팬데믹 완전극복과 피해소상공인에 대한 완전한 지원\n
+    <string name="String_1">1. 코로나 팬데믹 완전극복과 피해소상공인에 대한 완전한 지원\n
         2. 수출 1조 달러, 국민소득 5만 달러 달성, 주가지수 5000으로 세계 5강 달성\n
 3. 경제적 기본권 보장, 여성안심 평등사회, ‘청년기회국가’ 건설\n
 4. 311만호 주택공급으로 내집마련·주거안정 실현, 함께 잘 사는 균형발전\n
@@ -14,8 +13,7 @@
 10. 스마트 강군 건설, 실용외교로 평화안보 실현
     </string>
 
-    <string name="String_2">
-1. 코로나 극복 긴급구조 및 포스트 코로나 플랜\n
+    <string name="String_2">1. 코로나 극복 긴급구조 및 포스트 코로나 플랜\n
 2. 지속가능한 좋은 일자리 창출\n
 3. 수요에 부응하는 주택 250만호 이상 공급\n
 4. 스마트하고 공정하게 봉사하는 ‘디지털 플랫폼 정부’구현과 대통령실 개혁\n
@@ -27,12 +25,10 @@
 10. 공정한 교육과 미래인재 육성, 모두가 누리는 문화복지
     </string>
 
-    <string name="String_3">
-        1. 기후위기 극복을 위한 정의로운 탈탄소사회로의 전환\n 2. 노동자, 자영업자, 농어민의 일할 권리와 기본권 보장\n 3. 성차별, 폭력없는 성평등 사회 실현 / 청년, 청소년의 다양성 존중과 미래사회 보장\n 4. 부동산 불평등 해소·투기 근절, 기후위기·차별 해소를 위한 조세 개혁\n 5. 불공정 해소, 미래를 대비하는 경제개혁\n 6. 국민건강권 및 전국민 돌봄 보장\n 7. 맞춤교육, 문화다양성, 표현의 자유가 보장되는 나라\n 8. 모두가 존중받고 안전한 공동체\n 9. 특권과 부패가 없는 정의로운 대한민국\n 10. 평화와 공생의 한반도와 국제사회
+    <string name="String_3">1. 기후위기 극복을 위한 정의로운 탈탄소사회로의 전환\n 2. 노동자, 자영업자, 농어민의 일할 권리와 기본권 보장\n 3. 성차별, 폭력없는 성평등 사회 실현 / 청년, 청소년의 다양성 존중과 미래사회 보장\n 4. 부동산 불평등 해소·투기 근절, 기후위기·차별 해소를 위한 조세 개혁\n 5. 불공정 해소, 미래를 대비하는 경제개혁\n 6. 국민건강권 및 전국민 돌봄 보장\n 7. 맞춤교육, 문화다양성, 표현의 자유가 보장되는 나라\n 8. 모두가 존중받고 안전한 공동체\n 9. 특권과 부패가 없는 정의로운 대한민국\n 10. 평화와 공생의 한반도와 국제사회
     </string>
 
-    <string name="String_4">
-        1. 5·5·5 신성장전략으로 미래먹거리와 청년일자리 창출하겠습니다\n
+    <string name="String_4">1. 5·5·5 신성장전략으로 미래먹거리와 청년일자리 창출하겠습니다\n
 2. 자주·실용·평화 책임외교전략으로 한반도 평화통일 추진하겠습니다\n
 3. 공적연금 통합하여 청년의 미래, 대한민국의 미래를 지키겠습니다\n
 4. 코로나19 자영업 영업시간 제한 폐지하고 150조 손실보상하겠습니다\n
@@ -44,8 +40,7 @@
 10. 기후위기시대 탄소중립 추진하고, 스마트 농어촌으로 식량주권 지키겠습니다
     </string>
 
-    <string name="String_5">
-        1. 당신이 누구든 매달 65만 원 기본소득\n
+    <string name="String_5">1. 당신이 누구든 매달 65만 원 기본소득\n
 2. 토지세 기본소득 패키지로 부동산 불평등 해소\n
 3. 누구나 나답게 사는 성평등 사회\n
 4. 민주주의 기본소득으로 시작하는 정치개혁\n
@@ -57,8 +52,7 @@
 10. 국민을 위한 재정·통화제도 민주화
     </string>
 
-    <string name="String_6">
-1. 18세 이상 코로나 긴급 생계지원금 1인당 1억 원 지급(대통령 취임 후 2개월 이내에 지급)\n
+    <string name="String_6">1. 18세 이상 코로나 긴급 생계지원금 1인당 1억 원 지급(대통령 취임 후 2개월 이내에 지급)\n
 2. 18세 이상 국민배당금 1인당 매월 150만원 평생 지급(대통령 취임 2개월부터 지급 시작)\n
 3. 결혼시 3억원 지급[결혼자금 1억 + 주택자금 2억(무이자, 무보증, 무담보)]\n
 4. 출산수당 5천만원 지급, 연애수당 매월 20만원 지급\n
@@ -70,8 +64,7 @@
 10. 여성가족부 폐지, 결혼부 신설, 징병제를 모병제로 전환
     </string>
 
-    <string name="String_7">
-1. 재벌국유화, 국가투자은행 설립으로 공공경제 실현\n
+    <string name="String_7">1. 재벌국유화, 국가투자은행 설립으로 공공경제 실현\n
 2. 1,000만 국가책임일자리로 완전고용\n
 3. 전 기업 탄소배출 감축의무제로 기후정의 실현\n
 4. 읍면동 공공가사돌봄센터로 국가책임 돌봄사회\n
@@ -83,8 +76,7 @@
 10. 정당법 폐지, 교사·공무원의 정치활동 보장
     </string>
 
-    <string name="String_8">
-        1. 4 . 15 부정선거 진실 규명\n
+    <string name="String_8">1. 4 . 15 부정선거 진실 규명\n
 2. 공직선거 및 정당 내 전자투표금지\n
 3. 선관위 법관 임명 금지\n
 4. 투표절차의 공정성 확보\n
@@ -96,8 +88,7 @@
 10. 문재인 정권 심판
     </string>
 
-    <string name="String_9">
-        1. 1가구 1주택 꿈 이루기\n
+    <string name="String_9">1. 1가구 1주택 꿈 이루기\n
 2. 혁신 스타트업 10만개 만들기\n
 3. 청년 안전권 주거권 일할 권리 누리기\n
 4. 전국 5개 서울 만들기\n
@@ -106,8 +97,7 @@
 7. 금융 등 5대 서비스산업 진입장벽 없애기
     </string>
 
-    <string name="String_10">
-        1. 재건국 수준의 자유대한민국 개혁\n
+    <string name="String_10">1. 재건국 수준의 자유대한민국 개혁\n
 2. 대한민국 발전에 기여한 어르신들이 더 대접받는 제도 확립\n
 3. 작은 정부로 자유롭고 부유한 국민\n
 4. 원전폐기정책 전면 수정, 원전강국 재도약\n
@@ -116,8 +106,7 @@
 7. 입시부정, 채용비리, 부동산 투기, 금융비리 척결과 공영방송 폐지
     </string>
 
-    <string name="String_11">
-1. 성장중심 경제정책 추진\n
+    <string name="String_11">1. 성장중심 경제정책 추진\n
 2. 혁신적 국토균형발전계획 추진\n
 3. 교육제도 혁신\n
 4. 국가건전재정법 제정\n
@@ -130,8 +119,7 @@
 11. 개헌을 통한 민주통합정부 음모 분쇄
     </string>
 
-    <string name="String_12">
-        1. 토지공개념 및 20평 1억대 건설원가아파트 공급\n
+    <string name="String_12">1. 토지공개념 및 20평 1억대 건설원가아파트 공급\n
 2. 상위 0.1% 자산100억 이상 자산가 ‘부유세’ 부과\n
 3. 무상교육 무상의료 무상돌봄 (대학무상교육, 전국민주치의, 돌봄노동 국가고용)\n
 4. 농민수당 월 150만원, 농민기본법 제정으로 농업대혁명\n
@@ -143,8 +131,7 @@
 10. 성별임금격차 해소 ‘성평등임금공시제’ 전면도입
     </string>
 
-    <string name="String_13">
-        1. 부동산규제를 혁파하여 완전 철폐\n
+    <string name="String_13">1. 부동산규제를 혁파하여 완전 철폐\n
 2. 국민과 기업에게 필요한 감세 추진\n
 3. 친기업, 친환경으로 글로벌기업 강국 건설\n
 4. 진영, 세대, 지역, 계층, 젠더 갈등을 해소\n
@@ -156,8 +143,7 @@
 10. 한민족 민간교류 전면 자유화
     </string>
 
-    <string name="String_14">
-        1. 대표공약 – 한반도 프로젝트\n
+    <string name="String_14">1. 대표공약 – 한반도 프로젝트\n
 2. 정권교체가 아니라 정치교체\n
 3. 대통령은 외치, 내각은 내치\n
 4. 정치 논리에서 벗어난 장관 인선\n
@@ -171,5 +157,5 @@
 
 
     <string name="google_cloud_server_client_id">520156803708-ssr9ja5k9te7onpnqto6h9ngq1jgvi8l.apps.googleusercontent.com</string>
-<!--    <string name="google_cloud_server_client_id">520156803708-kqei1719oovuccblha0g6puhlqqpuc80.apps.googleusercontent.com</string>-->
+    <!--    <string name="google_cloud_server_client_id">520156803708-kqei1719oovuccblha0g6puhlqqpuc80.apps.googleusercontent.com</string>-->
 </resources>
